@@ -9,5 +9,6 @@ BOOLEAN:NONE
 BOOLEAN:UINT
 BOOLEAN:POINTER
 BOOLEAN:POINTER,UINT
+BOOLEAN:POINTER,POINTER
 INT:POINTER,POINTER
 DOUBLE:POINTER,UINT
